refactor: update services to use reorganized DTO structure
- Update all service classes with new DTO imports
- Maintain business logic consistency
- Ensure proper integration with updated mappers
- Support soft delete functionality
- Enhance error handling and validation