@@ -1,14 +1,16 @@
 package dev.gamified.GamifiedPlatform.services.levels;
 
-import dev.gamified.GamifiedPlatform.dtos.response.LevelResponse;
+import dev.gamified.GamifiedPlatform.dtos.response.levels.LevelResponse;
 import dev.gamified.GamifiedPlatform.enums.DifficultyLevel;
 import dev.gamified.GamifiedPlatform.mapper.LevelMapper;
 import dev.gamified.GamifiedPlatform.repository.LevelRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,13 +19,19 @@ public class GetLevelByDifficultyService {
     private final LevelRepository levelRepository;
 
     /**
-     * Busca níveis por dificuldade (EASY, MEDIUM, HARD, EXPERT)
+     * Busca níveis por dificuldade (EASY, MEDIUM, HARD, EXPERT) paginados
      */
-    public List<LevelResponse> execute(DifficultyLevel difficulty) {
-        return levelRepository.findByDifficultyLevel(difficulty)
+    public Page<LevelResponse> execute(DifficultyLevel difficulty, Pageable pageable) {
+        List<LevelResponse> allLevels = levelRepository.findByDifficultyLevel(difficulty)
                 .stream()
                 .map(LevelMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), allLevels.size());
+
+        List<LevelResponse> pageContent = allLevels.subList(start, end);
+        return new PageImpl<>(pageContent, pageable, allLevels.size());
     }
 
 }
